fixed mp-table col widths, alignment

--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -24,7 +24,7 @@
 </ng-template>
 
 <ng-template #table>
-<!-- nzVirtualItemSize can be determined by inspecting the row element in Dev tools, and noting the height calculated in its Styles tab. this probably shouldn't change much, if at all. -->
+  <!-- nzVirtualItemSize can be determined by inspecting the row element in Dev tools, and noting the height calculated in its Styles tab. this probably shouldn't change much, if at all. -->
   <nz-table #virtualTable
     nzSize="small"
     [nzData]="row$ | ngrxPush"
@@ -46,8 +46,7 @@
           nzLeft>
           Name
         </th>
-        <th nzWidth="200px"
-          nzLeft>
+        <th nzWidth="100px">
           Aliases
         </th>
         <th nzWidth="150px">
@@ -87,29 +86,33 @@
         </th>
       </tr>
       <tr class="filter-row">
-        <th></th>
-        <th>
+        <th nzWidth="200px"
+          nzLeft>
+        </th>
+        <th nzWidth="100px">
           <cvc-clearable-input-filter [(inputModel)]="aliasInput"
             (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
-        <th>
+        <th nzWidth="150px">
           <cvc-clearable-input-filter [(inputModel)]="geneSymbolInput"
             (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
-        <th nzLeft>
+        <th nzWidth="200px">
           <cvc-clearable-input-filter [(inputModel)]="variantNameInput"
             (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
-        <th>
+        <th nzWidth="250px">
           <cvc-clearable-input-filter [(inputModel)]="diseaseNameInput"
             (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
-        <th>
+        <th nzWidth="180px">
           <cvc-clearable-input-filter [(inputModel)]="drugNameInput"
             (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
-        <th nzRight></th>
-        <th nzRight></th>
+        <th nzWidth="75px"
+          nzRight></th>
+        <th nzWidth="75px"
+          nzRight></th>
       </tr>
     </thead>
     <tbody>
@@ -118,7 +121,8 @@
         let-index="index">
         <tr class="data-row">
           <td nzLeft>
-            <cvc-molecular-profile-tag [molecularProfile]="mp" [truncateLongName]="true"></cvc-molecular-profile-tag>
+            <cvc-molecular-profile-tag [molecularProfile]="mp"
+              [truncateLongName]="true"></cvc-molecular-profile-tag>
           </td>
           <td>
             <cvc-plain-tag-overflow [maxDisplayCount]="1"
@@ -129,13 +133,13 @@
             <cvc-tag-overflow tagType="gene"
               [tags]="mp.genes"
               [maxDisplayCount]="1"
-              [matchingText]="geneSymbolInput"></cvc-tag-overflow> 
+              [matchingText]="geneSymbolInput"></cvc-tag-overflow>
           </td>
-          <td nzLeft>
+          <td>
             <cvc-tag-overflow tagType="variant"
               [tags]="mp.variants"
               [maxDisplayCount]="1"
-              [matchingText]="variantNameInput"></cvc-tag-overflow> 
+              [matchingText]="variantNameInput"></cvc-tag-overflow>
           </td>
           <td>
             <cvc-tag-overflow tagType="disease"
@@ -149,8 +153,10 @@
               [maxDisplayCount]="1"
               [matchingText]="drugNameInput"> </cvc-tag-overflow>
           </td>
-          <td nzRight nzAlign="right">{{ mp.evidenceItemCount | number }}</td>
-          <td nzRight nzAlign="right">{{ mp.assertionCount | number }}</td>
+          <td nzRight
+            nzAlign="right">{{ mp.evidenceItemCount | number }}</td>
+          <td nzRight
+            nzAlign="right">{{ mp.assertionCount | number }}</td>
         </tr>
       </ng-template>
     </tbody>
