--- a/client/src/app/components/variant-types/variant-type-tag/variant-type-tag.component.html
+++ b/client/src/app/components/variant-types/variant-type-tag/variant-type-tag.component.html
@@ -29,6 +29,6 @@
 </ng-template>
 
 <ng-template #tagContent>
-  <i nz-icon nzType="civic-varianttype" nzTheme="twotone" nzTwotoneColor="#33B358"></i>
+  <i nz-icon nzType="civic-varianttype" nzTheme="twotone" [nzTwotoneColor]="iconColor"></i>
   {{ variantType.name }}
 </ng-template>
