--- a/client/src/app/components/variants/variant-tag/variant-tag.component.html
+++ b/client/src/app/components/variants/variant-tag/variant-tag.component.html
@@ -27,7 +27,7 @@
   <cvc-icon-badges
     [flagged]="variant.flagged"
     [entityColor]="iconColor">
-    <i nz-icon nzType="civic-variant" nzTheme="twotone" nzTwotoneColor="#33B358"></i>
+    <i nz-icon nzType="civic-variant" nzTheme="twotone" [nzTwotoneColor]="iconColor"></i>
 </cvc-icon-badges>
   <!-- variant name length mean: 12; mode: 5 (825); max: 68 -->
   <ng-container *ngIf="truncateLongName; else fullName">
