Add MP description text to MP browse table view

--- a/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
@@ -41,7 +41,9 @@
         <p nz-typography
           nzEllipsis
           nzExpandable
-          [nzEllipsisRows]="2">CIViC molecular profiles are... .</p>
+          [nzEllipsisRows]="2">
+          CIViC molecular profiles are complex combinations of one or more CIViC variants  across one or more genes. Variants are placed in combinations connected by AND or OR, and mutual exclusivity is supported by NOT. These relationships may be further defined by parenthesis.
+        </p>
       </nz-col>
       <nz-col nzFlex="auto"
         class="header-links">
