--- a/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
@@ -42,7 +42,7 @@
           nzEllipsis
           nzExpandable
           [nzEllipsisRows]="2">
-          CIViC molecular profiles are complex combinations of one or more CIViC variants  across one or more genes. Variants are placed in combinations connected by AND or OR, and mutual exclusivity is supported by NOT. These relationships may be further defined by parenthesis.
+          CIViC molecular profiles are complex combinations of one or more CIViC variants across one or more genes. Variants are placed in combinations connected by AND or OR, and mutual exclusivity is supported by NOT. These relationships may be further defined by parentheses.
         </p>
       </nz-col>
       <nz-col nzFlex="auto"
