--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -72,7 +72,7 @@
           nzTooltipTitle="Evidence Count">
           <i nz-icon
             nzTheme="twotone"
-            [nzTwotoneColor]="'Evidence' | entityColor"
+            [nzTwotoneColor]="'EvidenceItem' | entityColor"
             nzType="civic-evidence"></i> Count
         </th>
         <th nzWidth="75px"
