fixed contributor icon colors

--- a/client/src/app/components/users/users-table/users-table.component.html
+++ b/client/src/app/components/users/users-table/users-table.component.html
@@ -174,8 +174,8 @@
 <ng-template #titleTemplate>
   <i nz-icon
     nzTheme="twotone"
-    [nzTwotoneColor]="'User' | entityColor"
-    nzType="civic-user"></i>
+    [nzTwotoneColor]="'Curator' | entityColor"
+    nzType="civic-curator"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
     <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
   </ng-container>
