--- a/client/src/app/views/users/users-home/users-home.page.html
+++ b/client/src/app/views/users/users-home/users-home.page.html
@@ -9,8 +9,8 @@
         class="header-icon">
         <i nz-icon
           nzTheme="twotone"
-          [nzTwotoneColor]="'User' | entityColor"
-          nzType="civic-user"></i> </nz-col>
+          [nzTwotoneColor]="'Curator' | entityColor"
+          nzType="civic-curator"></i> </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
         <h2>Contributors</h2>
