--- a/client/src/app/components/users/user-tag/user-tag.component.html
+++ b/client/src/app/components/users/user-tag/user-tag.component.html
@@ -5,8 +5,7 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag
-    nz-popover
+  <nz-tag nz-popover
     [nzPopoverMouseEnterDelay]="0.5"
     [nzPopoverContent]="userPopover"
     [nzPopoverTrigger]="enablePopover ? 'hover' : null"
@@ -31,5 +30,7 @@
 
 <ng-template #tagContent>
   <i nz-icon
-    [nzType]="icon" nzTheme="twotone" nzTwotoneColor="#A0D8F5"></i> {{ user.displayName }}
+    [nzType]="icon"
+    nzTheme="twotone"
+    [nzTwotoneColor]="user.role | titlecase | entityColor"></i> {{ user.displayName }}
 </ng-template>
