Remove total from table counts since it's unreliable

--- a/client/src/app/components/shared/table-counts/table-counts.component.html
+++ b/client/src/app/components/shared/table-counts/table-counts.component.html
@@ -3,8 +3,5 @@
   class="table-counts"
   nz-typography
   nzType="secondary">
-  {{ tci.totalCount | number }} total, showing {{ tci.edgeCount | number }}
-  <ng-container *ngIf="tci.filteredCount && tci.filteredCount < tci.totalCount">
-    of {{ tci.filteredCount | number }} filtered
-  </ng-container>
+  {{ tci.edgeCount | number }} of {{ tci.filteredCount | number }} displayed
 </span>
