Use molecular profile input from on the revise evidence form

--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -131,6 +131,7 @@
           <td>
             <cvc-plain-tag-overflow [maxDisplayCount]="1"
               [tags]="mp.aliases | pluck: 'name'"
+              [maxDisplayCount]="1"
               [matchingText]="aliasInput"></cvc-plain-tag-overflow>
           </td>
           <td>
