--- a/client/src/app/forms/evidence-revise/evidence-revise.form.html
+++ b/client/src/app/forms/evidence-revise/evidence-revise.form.html
@@ -35,3 +35,12 @@
     </ng-template>
   </ng-container>
 </ng-template>
+
+
+<div nz-row>
+  <div nz-col
+    nzSpan="24">
+    <ngx-json-viewer *ngIf="formModel"
+      [json]="formModel"></ngx-json-viewer>
+  </div>
+</div>
