header components no longer wrap

--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -110,6 +110,10 @@ nz-sider {
   padding: 1em 1em 1em 0;
 }
 
+#header-row {
+  flex-wrap: nowrap;
+}
+
 #header-menu {
   text-align: right;
   height: @app-header-height;
