page-header content row no longer wrap

--- a/client/src/themes/overrides/entity-page-header.overrides.less
+++ b/client/src/themes/overrides/entity-page-header.overrides.less
@@ -9,6 +9,7 @@
 
   border-radius: @border-radius-md;
   .header-content {
+    flex-wrap: nowrap;
     background-color: #f0f0f0;
     border-top-left-radius: @border-radius-md;
     border-top-right-radius: @border-radius-md;
