updated entity home page headers to work better w/ narrow widths

--- a/client/src/app/views/assertions/assertions-home/assertions-home.page.html
+++ b/client/src/app/views/assertions/assertions-home/assertions-home.page.html
@@ -22,7 +22,7 @@
           [nzTwotoneColor]="'Assertion' | entityColor"
           nzType="civic-assertion"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Assertions</h2>
         <p nz-typography
