--- a/client/src/app/views/clinical-trials/clinical-trials-home/clinical-trials-home.page.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-home/clinical-trials-home.page.html
@@ -11,7 +11,7 @@
           [nzTwotoneColor]="'ClinicalTrial' | entityColor"
           nzType="civic-clinicaltrial"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Clinical Trials</h2>
         <p nz-typography
