--- a/client/src/app/views/diseases/diseases-home/diseases-home.page.html
+++ b/client/src/app/views/diseases/diseases-home/diseases-home.page.html
@@ -12,7 +12,7 @@
         [nzTwotoneColor]="'Disease' | entityColor"
         nzType="civic-disease"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Diseases</h2>
         <p nz-typography
