--- a/client/src/app/views/sources/sources-home/sources-home.page.html
+++ b/client/src/app/views/sources/sources-home/sources-home.page.html
@@ -23,7 +23,7 @@
           [nzTwotoneColor]="'Source' | entityColor"
           nzType="civic-source"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Sources</h2>
         <p nz-typography
