--- a/client/src/app/views/users/users-home/users-home.page.html
+++ b/client/src/app/views/users/users-home/users-home.page.html
@@ -11,7 +11,7 @@
           nzTheme="twotone"
           [nzTwotoneColor]="'Curator' | entityColor"
           nzType="civic-curator"></i> </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Contributors</h2>
         <p nz-typography
