--- a/client/src/app/views/variant-groups/variant-groups-home/variant-groups-home.page.html
+++ b/client/src/app/views/variant-groups/variant-groups-home/variant-groups-home.page.html
@@ -22,7 +22,7 @@
           [nzTwotoneColor]="'VariantGroup' | entityColor"
           nzType="civic-variantgroup"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Variant Groups</h2>
         <p nz-typography
