--- a/client/src/app/views/variant-types/variant-types-home/variant-types-home.page.html
+++ b/client/src/app/views/variant-types/variant-types-home/variant-types-home.page.html
@@ -11,7 +11,7 @@
           [nzTwotoneColor]="'VariantType' | entityColor"
           nzType="civic-varianttype"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Variant Types</h2>
         <p nz-typography
