--- a/client/src/app/views/variants/variants-home/variants-home.page.html
+++ b/client/src/app/views/variants/variants-home/variants-home.page.html
@@ -34,7 +34,7 @@
           [nzTwotoneColor]="'Variant' | entityColor"
           nzType="civic-variant"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Variants</h2>
         <p nz-typography
