--- a/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
@@ -35,15 +35,13 @@
           [nzTwotoneColor]="'MolecularProfile' | entityColor"
           nzType="civic-molecularprofile"></i>
       </nz-col>
-      <nz-col nzFlex="600px"
+      <nz-col nzFlex="0 1 600px"
         class="header-description">
         <h2>Molecular Profiles</h2>
         <p nz-typography
           nzEllipsis
           nzExpandable
-          [nzEllipsisRows]="2">
-          CIViC molecular profiles are complex combinations of one or more CIViC variants across one or more genes. Variants are placed in combinations connected by AND or OR, and mutual exclusivity is supported by NOT. These relationships may be further defined by parentheses.
-        </p>
+          [nzEllipsisRows]="2">CIViC molecular profiles are... .</p>
       </nz-col>
       <nz-col nzFlex="auto"
         class="header-links">
