Disallow MP creation while creating/revising assertions

--- a/client/src/app/forms/complex-molecular-profile-input/complex-molecular-profile-input.form.html
+++ b/client/src/app/forms/complex-molecular-profile-input/complex-molecular-profile-input.form.html
@@ -30,10 +30,15 @@
             </ng-container>
             <ng-template #newMp>
               <cvc-mp-tag-name [nameSegments]="mpName"></cvc-mp-tag-name>
-              <button nz-button
-                nzSize="small" (click)="submitNewMp()" style="float: right"> 
-                Create Molecular Profile 
-              </button>
+              <ng-container *ngIf="this.allowCreate; else createNotAllowed">
+                <button nz-button
+                  nzSize="small" (click)="submitNewMp()" style="float: right">
+                  Create Molecular Profile
+                </button>
+              </ng-container>
+              <ng-template #createNotAllowed>
+                <span style="float: right">This Molecular Profile doesn't exist yet. Only existing Molecular Profiles can be used for Assertions. </span>
+              </ng-template>
             </ng-template>
           </ng-container>
         </ng-container>
