evidenceEnumTooltip pipe provides levelBrief option

--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -62,7 +62,7 @@
             <nz-descriptions-item nzTitle="Level">
               <nz-tag nz-tooltip
                 [nzTooltipTitle]="evidence.evidenceLevel | enumTooltip:'evidenceLevel'">
-                <strong>{{ evidence.evidenceLevel  }}</strong>
+                <strong>{{ evidence.evidenceLevel  }}</strong> - {{ evidence.evidenceLevel | enumTooltip:'evidenceLevelBrief' }}
               </nz-tag>
             </nz-descriptions-item>
 
