org-selector-directive and parent updating styles correctly

--- a/client/src/app/forms/config/components/org-selector-btn-group/org-selector-btn-group.component.html
+++ b/client/src/app/forms/config/components/org-selector-btn-group/org-selector-btn-group.component.html
@@ -13,7 +13,8 @@
 
       <ng-container *ngTemplateOutlet="submitButton"></ng-container>
 
-      <button type="button" nz-button [nzType]="buttonType" [nzDanger]="this.nzDanger" class="org-dropdown-btn"
+      <button type="button" nz-button
+        [ngClass]="buttonClass$ | ngrxPush"
         [disabled]="isDisabled$ | ngrxPush"
         nz-dropdown [nzDropdownMenu]="orgMenu">
         <nz-space nzDirection="horizontal" [nzSize]="4">
