org-select btn group handles hidden state sync

--- a/client/src/app/forms/config/components/org-selector-btn-group/org-selector-btn-group.component.html
+++ b/client/src/app/forms/config/components/org-selector-btn-group/org-selector-btn-group.component.html
@@ -15,6 +15,7 @@
 
       <button type="button" nz-button
         [ngClass]="buttonClass$ | ngrxPush"
+        [hidden]="isHidden$ | ngrxPush"
         [disabled]="isDisabled$ | ngrxPush"
         nz-dropdown [nzDropdownMenu]="orgMenu">
         <nz-space nzDirection="horizontal" [nzSize]="4">
