--- a/client/src/app/forms/config/types/org-submit-button/org-submit-button.type.html
+++ b/client/src/app/forms/config/types/org-submit-button/org-submit-button.type.html
@@ -1,10 +1,11 @@
 <cvc-form-buttons>
-  <cvc-org-selector-btn-group #orgButton [(selectedOrg)]="selectedOrg"
-    [nzSize]="to.submitSize">
+  <cvc-org-selector-btn-group #orgButton
+    [(selectedOrg)]="selectedOrg">
     <button type="submit"
       (click)="orgButton.refreshViewer();"
       nz-button
       cvcOrgSelectorBtn
+      [nzSize]="to.submitSize"
       nzType="primary"
       [disabled]="!form.valid">
       {{ to.submitLabel }}
