--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-detail.view.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-detail.view.html
@@ -60,6 +60,18 @@
         </nz-space>
       </nz-page-header-extra>
       <nz-page-header-content>
+        <nz-alert *ngIf="mp.deprecated"
+          nzBanner
+          [nzMessage]=deprecationMessageTemplate
+          nzType="error"></nz-alert>
+        <ng-template #deprecationMessageTemplate>
+          This Molecular Profile has been deprecated because one or more of its underlying variants are deprecated
+          <ng-container *ngFor="let v of mp.deprecatedVariants">
+            <br />
+            <cvc-variant-tag [variant]="v"></cvc-variant-tag> {{ v.deprecationReason | enumToTitle}}. 
+            <cvc-comment-body [commentBodySegments]="v.deprecationComment.parsedComment"></cvc-comment-body>
+          </ng-container>
+        </ng-template>
         <cvc-tab-navigation [tabs]="this.tabs$ | ngrxPush">
           <ng-template #tabBarExtraContent>
             <nz-col id="contributors-col">
