--- a/client/src/app/views/variants/variants-detail/variants-detail.view.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.view.html
@@ -79,6 +79,14 @@
         </nz-space>
       </nz-page-header-extra>
       <nz-page-header-content>
+        <nz-alert *ngIf="variant.deprecated"
+          nzBanner
+          [nzMessage]=deprecationMessageTemplate
+          nzType="error"></nz-alert>
+        <ng-template #deprecationMessageTemplate>
+          This Variant has been deprecated for reason: {{ variant.deprecationReason | enumToTitle }}.
+          <cvc-comment-body [commentBodySegments]="variant.deprecationComment.parsedComment"></cvc-comment-body>
+        </ng-template>
         <cvc-tab-navigation [tabs]="this.tabs$ | ngrxPush">
           <ng-template #tabBarExtraContent>
             <nz-col id="contributors-col">
