--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -105,6 +105,34 @@
       <nz-row [nzGutter]="[8,8]">
         <!-- variant related entities, attributes -->
         <nz-col [nzSpan]="24">
+          <nz-descriptions nzLayout="vertical"
+            nzSize="small"
+            [nzColumn]="{ xxl: 3, xl: 3, lg: 3, md: 1, sm: 1, xs: 1 }"
+            nzBordered="true">
+
+            <!-- deprecated status -->
+            <nz-descriptions-item *ngIf="variant.deprecated" nzTitle="Status">
+              <cvc-status-tag status="DEPRECATED"></cvc-status-tag>
+            </nz-descriptions-item>
+
+            <!-- deprecation event -->
+            <nz-descriptions-item *ngIf="variant.deprecated" [nzTitle]="deprecatedTitle">
+              by
+              <cvc-user-tag [user]="variant.deprecationEvent.originatingUser"></cvc-user-tag>
+            </nz-descriptions-item>
+            <ng-template #deprecatedTitle>
+              Deprecated
+              <span nz-typography
+                nzType="secondary">
+                ({{ variant.deprecationEvent.createdAt | timeago }})
+              </span>
+            </ng-template>
+          </nz-descriptions>
+        </nz-col>
+
+        <!-- BLOCK: variant linked attributes -->
+        <nz-col [nzSpan]="24">
+
           <nz-descriptions nzLayout="horizontal"
             nzSize="small"
             [nzColumn]="{ xxl: 2, xl: 2, lg: 1, md: 1, sm: 1, xs: 1 }"
