--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
@@ -49,6 +49,11 @@
               </ng-template>
             </nz-descriptions-item>
 
+            <!-- CIViC Score-->
+            <nz-descriptions-item nzTitle="CIViC Variant Evidence Score">
+              <span nz-typography>{{ mp.evidenceScore | number }}</span>
+            </nz-descriptions-item>
+
             <!-- aliases -->
             <nz-descriptions-item nzTitle="Aliases">
               <ng-container *ngIf="mp.molecularProfileAliases.length > 0; else noAliases">
