--- a/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
@@ -1,6 +1,6 @@
 <!-- <cvc-section-navigation [actionsTpl]="variantActions"> </cvc-section-navigation> -->
 <cvc-section-navigation> </cvc-section-navigation>
-<ng-template #variantActions>
+<!-- <ng-template #variantActions>
   <ng-container *ngrxLet="viewer$ as viewer">
     <button routerLink="/variants/add/submit"
       nz-button
@@ -20,7 +20,7 @@
       </ng-template>
     </button>
   </ng-container>
-</ng-template>
+</ng-template> -->
 
 <nz-page-header class="site-page-header">
 
