--- a/client/src/app/forms/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms/variant-revise/variant-revise.form.html
@@ -8,7 +8,7 @@
 
     <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 
-    <formly-form *ngIf="!this.success"
+    <formly-form *ngIf="!this.success && !this.noNewRevisions"
       [form]="formGroup"
       [fields]="formFields"
       [model]="formModel"
@@ -26,7 +26,7 @@
       </cvc-form-errors-alert>
     </nz-form-item>
   </ng-container>
-  <ng-container *ngIf="this.success">
+  <ng-container *ngIf="this.success && !this.noNewRevisions">
     <nz-alert nzType="success"
       nzMessage="Suggested Revision Submitted"
       [nzDescription]="successMessage"
@@ -34,6 +34,16 @@
     <ng-template #successMessage
       nzSize="small">
       <p>View it on the <a routerLink="../../revisions">Revisions Page</a>.</p>
+    </ng-template>
+  </ng-container>
+  <ng-container *ngIf="this.noNewRevisions">
+    <nz-alert nzType="warning"
+      nzMessage="No New Revisions Created"
+      [nzDescription]="duplicateMessage"
+      nzShowIcon></nz-alert>
+    <ng-template #duplicateMessage
+      nzSize="small">
+      <p>Your submission succeeded but no new revisions were created. Identical ones already exist, view them on the <a routerLink="../../revisions">Revisions Page</a>.</p>
     </ng-template>
   </ng-container>
 </ng-template>
