Disable `deprecate` button if the variant is already deprecated

--- a/client/src/app/views/variants/variants-detail/variants-detail.view.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.view.html
@@ -76,7 +76,8 @@
             <button
               nz-button
               nzSize="small"
-              *ngIf="viewer.isEditor && !variant.deprecated"
+              *ngIf="viewer.isEditor"
+              [disabled]="variant.deprecated"
               nz-popover
               nzPopoverTitle="Deprecate This Variant"
               nzPopoverTrigger="click"
